--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Title -->
-        <title>TogglEsports</title>
+        <title>Flea Market bot</title>
 
         <!-- Favicon -->
-        <link REL="SHORTCUT ICON" HREF="Images/Profpicpatreon.jpg">
+        <link rel="shortcut icon" href="fleamarketbot.ico">
+        <link rel="apple-touch-icon" href="Images/Profpicpatreon.png">
+        <link rel="icon" size="192X192" href="Images/Profpicpatreon.png">
 
         <!-- STYLE SHEETS -->
         <link rel="stylesheet" media="screen and (min-width: 2000px)" href="stylesheets/extraLarge.css">
