--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="fleamarketbot.ico">
-        <link rel="apple-touch-icon" href="Images/Profpicpatreon.png">
-        <link rel="icon" size="192X192" href="Images/Profpicpatreon.png">
+        <link rel="apple-touch-icon" type="image/png" href="Images/Profpicpatreon.png">
+        <link rel="icon" size="192X192" type="image/png" href="Images/Profpicpatreon.png">
 
         <!-- STYLE SHEETS -->
         <link rel="stylesheet" media="screen and (min-width: 2000px)" href="stylesheets/extraLarge.css">
@@ -24,7 +24,7 @@
 
     </head>
 
-    
+
     <body>
 
         <!-- Navigation Bar -->
