--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="container3TextContainer">
                     <h1 class="container3Text">Check out Patreon for more details</h1>
                 </div class="linkContainer">     
-                    <img src="Images/patreonBadge.png" href="https://www.patreon.com/bePatron?u=36663606" class="webStoreBadge" alt="Patreon Badge">
+                    <img src="Images/patreonBadge.png" href="https://www.patreon.com/FleaMarketBot?fan_landing=true" class="webStoreBadge" alt="Patreon Badge">
             </div>
                 <img src="resources/blackDivFooterBottom.png" class="containerDividerFooter" alt="Divider">
             </div>
