--- a/index.html
+++ b/index.html
@@ -162,9 +162,11 @@
             <div class="content3Container">
                 <div class="container3TextContainer">
                     <h1 class="container3Text">Check out Patreon for more details</h1>
+            <a href="https://www.patreon.com/FleaMarketBot?fan_landing=true">
                 </div class="linkContainer">     
-                    <img src="Images/patreonBadge.png" href="https://www.patreon.com/FleaMarketBot?fan_landing=true" class="webStoreBadge" alt="Patreon Badge">
-            </div>
+                        <img src="Images/patreonBadge.png" class="webStoreBadge" alt="Patreon Badge">
+                </div>
+            </a>
                 <img src="resources/blackDivFooterBottom.png" class="containerDividerFooter" alt="Divider">
             </div>
        
