--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Flea Market bot</title>
 
         <!-- Favicon -->
-        <link rel="shortcut icon" href="fleamarketbot.ico">
+        <link rel="shortcut icon" href="favicon.ico">
         <link rel="apple-touch-icon" type="image/png" href="Images/Profpicpatreon.png">
         <link rel="icon" size="192X192" type="image/png" href="Images/Profpicpatreon.png">
 
