--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="favicon.ico">
-        <link rel="apple-touch-icon" type="image/png" href="Images/Profpicpatreon.png">
-        <link rel="icon" size="192X192" type="image/png" href="Images/Profpicpatreon.png">
+        <link rel="apple-touch-icon" type="image/png" href="Images/favicon.png">
+        <link rel="icon" size="192X192" type="image/png" href="Images/favicon.png">
 
         <!-- STYLE SHEETS -->
         <link rel="stylesheet" media="screen and (min-width: 2000px)" href="stylesheets/extraLarge.css">
