--- a/signup.html
+++ b/signup.html
@@ -66,7 +66,7 @@
 <div class="tierContainer">
     <div class="tier">
         <div class="title">Standard Bot - Streamer Package</div>
-            <div class="price">$7.99</div>
+            <div class="price">$6.99</div>
                 <div class="price-lbl">Per month</div>
                     <ul>
                         <li>
@@ -104,9 +104,9 @@
                         <li>
                             <b><bold>Unlimited</bold> Command Uses Per Month</b>
                         </li> 
-                        <p>
-                            ---------------------------------------------
-                        </p>
+                        <li>
+                            <b><bold>Mod Only</bold> and <bold>Sub Only</bold> Modes</b>
+                        </li>
                         <li>
                             <b>Change the Name of the Bot (Pending Name</b>
                             Availability)
