--- a/signup.html
+++ b/signup.html
@@ -105,6 +105,9 @@
                             <b><bold>Unlimited</bold> Command Uses Per Month</b>
                         </li> 
                         <li>
+                            <b><bold>Dedicated</bold> Host</b>
+                        </li> 
+                        <li>
                             <b><bold>Mod Only</bold> and <bold>Sub Only</bold> Modes</b>
                         </li>
                         <li>
