added command page

--- a/commands.html
+++ b/commands.html
@@ -28,7 +28,7 @@
   <button class="navText navText1" id="Home"><a class="textDeco" href="index.html">Home</a></button>
   <button class="navText navText2"><a class="textDeco" href="index.html#download">Download</a></button>
   <button class="navText navText3"><a class="textDeco" href="contact.html">Contact Us</a></button>
-  <button class="navText navText4"><a class="textDeco" href="commands.html">Commands</a></button>
+  <button class="navText navText4"><a class="textDeco active" href="">Commands</a></button>
   
   <div class="navigation">
       <div id="menuToggle">
@@ -39,10 +39,10 @@
         <span></span>
         
         <ul id="menu">
-          <a href="index.html#home" class="textSmall smallActive"><li>Home</li></a>
+          <a href="index.html#home" class="textSmall"><li>Home</li></a>
           <a href="index.html#download" class="textSmall"><li>Download</li></a>
           <a href="contact.html" class="textSmall"><li>Contact</li></a>
-          <a href="commands.html" class="textSmall"><li>Commands</li></a>
+          <a href="commands.html" class="textSmall smallActive"><li>Commands</li></a>
         </ul>
       </div>
   </div>
@@ -66,64 +66,51 @@
     </a>
 </div>
 <div class="tierContainer">
-    <div class="tier">
-        <div class="title">Standard Bot - Streamer Package</div>
-            <div class="price">$4.99</div>
-                <div class="price-lbl">Per month</div>
+    <div class="commandTier">
+        <div class="commandsTitle">Standard Bot Commands</div>
                     <ul>
-                        <li>
-                            <b>FleaMarketBot will join <bold>your (or your favorite</bold></b>
-                            <bold>streamer's</bold> Twitch Chat <bold>24/7</bold>
-                        </li> 
-                        <li>
-                            <b><bold>Hourly</bold> Flea Market Price Updates</b>
-                        </li> 
-                        <li>
-                            <b><bold>5000</bold> Command Uses Per Month</b>
-                        </li> 
-                        <li>
-                            <b>!price - Command Prompt</b>
-                        </li> 
-                        <p class="desc">
-                            Designed for smaller communities, this twitch bot will increase chat engagement through dynamic commands. <i>(If signing up for a streamer, please verify that he/she approves this bot joining their channel before subscribing)</i>    
+                        <p>
+                            All Standard Commands:
                         </p>
+                        <li>
+                            <b><bold>!price [item name]</bold> - <p class="subText">Bot responds with the current flea market price of item</p></b>
+                        </li> 
+                        <li>
+                            <b><bold>!flea delay [time in seconds]</bold> - <p class="subText">Bot only responds to '!price' every [time in seconds]</p></b>
+                        </li> 
+                        <li>
+                            <b><bold>!flea commands</bold> - <p class="subText">Bot responds with all commands</p></b>
+                        </li> 
                     </ul> 
-            <a href="https://www.patreon.com/join/FleaMarketBot/checkout?rid=5298169" target="_blank" class="get-btn"><p class="selectButton">Select</p></a>
+            <a href="https://www.patreon.com/join/FleaMarketBot/checkout?rid=5298169" target="_blank" class="get-btn"><p class="selectButton">Get Bot</p></a>
     </div>
 
-    <div class="tier2">
-        <div class="title">Premium Bot - Streamer Package</div>
-            <div class="price">$12.99</div>
-                <div class="price-lbl">Per month</div>
+    <div class="commandTier2">
+        <div class="commandsTitle">Premium Bot Commands</div>
                     <ul>
+                        <p>
+                            All Premium Commands:
+                        </p>
                         <li>
-                            <b>FleaMarketBot will join <bold>your (or your favorite</bold></b>
-                            <bold>streamer's</bold> Twitch Chat <bold>24/7</bold>
+                            <b><bold>!price [item name]</bold> - <p class="subText">Bot responds with the current flea market price of item</p></b>
                         </li> 
                         <li>
-                            <b><bold>Hourly</bold> Flea Market Price Updates</b>
+                            <b><bold>!flea delay [time in seconds]</bold> - <p class="subText">Bot only responds to '!price' every [time in seconds]</p></b>
                         </li> 
                         <li>
-                            <b><bold>Unlimited</bold> Command Uses Per Month</b>
+                            <b><bold>!flea mod only</bold> - <p class="subText">Bot only responds to '!price' from mods</p></b>
                         </li> 
                         <li>
-                            <b><bold>Dedicated</bold> Host</b>
+                            <b><bold>!flea sub only</bold> - <p class="subText">Bot only responds to '!price' from subs</p></b>
                         </li> 
                         <li>
-                            <b><bold>Mod Only</bold> and <bold>Sub Only</bold> Modes</b>
+                            <b><bold>!flea all chat</bold> - <p class="subText">Bot responds to '!price' from everyone</p></b>
                         </li>
                         <li>
-                            <b>Change the Name of the Bot (Pending Name</b>
-                            Availability)
+                            <b><bold>!flea commands</bold> - <p class="subText">Bot responds with all commands</p></b>
                         </li> 
-                        <li>
-                            <b>Choose a <bold>Custom</bold> Command Prompt</b>
-                        </li> 
-                        <p class="desc">
-                            Designed for larger communities, this twitch bot will increase chat interaction with you, the streamer.    
-                        </p>
                     </ul> 
-            <a href="https://www.patreon.com/join/FleaMarketBot/checkout?rid=5298170" target="_blank" class="get-btn"><p class="selectButton">Select</p></a>
+            <a href="https://www.patreon.com/join/FleaMarketBot/checkout?rid=5298170" target="_blank" class="get-btn"><p class="selectButton">Get Bot</p></a>
     </div>
 </div>
 
