--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Title -->
-        <title>TogglEsports</title>
+        <title>FleaMarketBot</title>
 
         <!-- STYLE SHEETS -->
         <link rel="stylesheet" media="screen and (min-width: 2000px)" href="stylesheets/contactExtraLarge.css">
@@ -31,7 +31,8 @@
   <button class="navText navText1" id="Home"><a class="textDeco" href="index.html">Home</a></button>
   <button class="navText navText2"><a class="textDeco" href="index.html#download">Download</a></button>
   <button class="navText navText3"><a class="textDeco active" href="">Contact Us</a></button>
-  
+  <button class="navText navText4"><a class="textDeco" href="commands.html">Commands</a></button>
+
   <div class="navigation">
       <div id="menuToggle">
         <input type="checkbox" />
@@ -44,6 +45,7 @@
           <a href="index.html#home" class="textSmall smallActive"><li>Home</li></a>
           <a href="index.html#download" class="textSmall"><li>Download</li></a>
           <a href="contact.html" class="textSmall"><li>Contact</li></a>
+          <a href="commands.html" class="textSmall"><li>Commands</li></a>
         </ul>
       </div>
   </div>
