--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Title -->
-        <title>Flea Market bot</title>
+        <title>FleaMarketBot</title>
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="favicon.ico">
@@ -34,6 +34,7 @@
             <button class="navText navText1" id="Home"><a class="textDeco active" href="index.html">Home</a></button>
             <button class="navText navText2"><a class="textDeco" href="index.html#download">Download</a></button>
             <button class="navText navText3"><a class="textDeco" href="contact.html">Contact Us</a></button>
+            <button class="navText navText4"><a class="textDeco" href="commands.html">Commands</a></button>
             
             <div class="navigation">
                 <div id="menuToggle">
@@ -47,6 +48,7 @@
                     <a href="#home" class="textSmall smallActive"><li>Home</li></a>
                     <a href="#download" class="textSmall"><li>Download</li></a>
                     <a href="contact.html" class="textSmall"><li>Contact</li></a>
+                    <a href="commands.html" class="textSmall"><li>Commands</li></a>
                   </ul>
                 </div>
             </div>
@@ -161,7 +163,7 @@
 
             <div class="content3Container">
                 <div class="container3TextContainer">
-                    <h1 class="container3Text">Check out Patreon for more details</h1>
+                    <h1 class="container3Text">Check out Patreon to get FleaMarketBot on your channel!</h1>
             <a href="https://www.patreon.com/FleaMarketBot?fan_landing=true">
                 </div class="linkContainer">     
                         <img src="Images/patreonBadge.png" class="webStoreBadge" alt="Patreon Badge">
