sitemap and text update

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="homeContainer2">
             <div class="container2TextContainerTop">
                 <h1 class="container2Emote1">🎉🎉🎉</h1>
-                <h1 class="container2Text1">Gift FleaMarketBot access to your favorite streamer to show your appreciation</h1>
+                <h1 class="container2Text1">FleaMarketBot is the perfect Escape from Tarkov Twitch Bot for your channel</h1>
                 <!-- <h1 class="container2Text2">favorite streamer to show your appreciation</h1> -->
                 <h1 class="container2Emote2">🎉🎉🎉</h1>
             </div>
