--- a/commands.html
+++ b/commands.html
@@ -79,7 +79,7 @@
                             <b><bold>!flea delay [time in seconds]</bold> - <p class="subText">Bot only responds to '!price' every [time in seconds]</p></b>
                         </li> 
                         <li>
-                            <b><bold>!flea commands</bold> - <p class="subText">Bot responds with all commands</p></b>
+                            <b><bold>!flea command</bold> - <p class="subText">Bot responds with all commands</p></b>
                         </li> 
                     </ul> 
             <a href="https://www.patreon.com/join/FleaMarketBot/checkout?rid=5298169" target="_blank" class="get-btn"><p class="selectButton">Get Bot</p></a>
@@ -107,7 +107,7 @@
                             <b><bold>!flea allchat</bold> - <p class="subText">Bot responds to '!price' from everyone</p></b>
                         </li>
                         <li>
-                            <b><bold>!flea commands</bold> - <p class="subText">Bot responds with all commands</p></b>
+                            <b><bold>!flea command</bold> - <p class="subText">Bot responds with all commands</p></b>
                         </li> 
                     </ul> 
             <a href="https://www.patreon.com/join/FleaMarketBot/checkout?rid=5298170" target="_blank" class="get-btn"><p class="selectButton">Get Bot</p></a>
