--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
   
   <button class="navText navText1" id="Home"><a class="textDeco" href="index.html">Home</a></button>
   <button class="navText navText2"><a class="textDeco" href="index.html#download">Download</a></button>
-  <button class="navText navText3"><a class="textDeco" href="contact.html">Contact Us</a></button>
+  <button class="navText navText3"><a class="textDeco" href="about.html">About</a></button>
   <button class="navText navText4"><a class="textDeco" href="commands.html">Commands</a></button>
   
   <div class="navigation">
@@ -41,7 +41,7 @@
         <ul id="menu">
           <a href="index.html#home" class="textSmall smallActive"><li>Home</li></a>
           <a href="index.html#download" class="textSmall"><li>Download</li></a>
-          <a href="contact.html" class="textSmall"><li>Contact</li></a>
+          <a href="about.html" class="textSmall"><li>About</li></a>
           <a href="commands.html" class="textSmall"><li>Commands</li></a>
         </ul>
       </div>
@@ -145,12 +145,8 @@
     <div class="footerNav">
         <button class="homeFooterButton"><a class="homeFooterButton" href="#Home">Home</a></button>
         <button class="downloadFooterButton"><a class="downloadFooterButton" href="#download">Download</a></button>
-        <button class="contactUsFooterButton"><a class="contactUsFooterButton" href="contact.html">Contact Us</a></button>
+        <button class="contactUsFooterButton"><a class="contactUsFooterButton" href="about.html">About</a></button>
         
-    </div>
-
-    <div class="disclaimerContainer">
-        <p class="disclaimer">FleaMarketBot is owned and operated by TogglEsports</p>
     </div>
 </footer>
 
