updated commands to include !trade

--- a/commands.html
+++ b/commands.html
@@ -76,6 +76,9 @@
                             <b><bold>!price [item name]</bold> - <p class="subText">Bot responds with the current flea market price of item</p></b>
                         </li> 
                         <li>
+                            <b><bold>!trade [item name]</bold> - <p class="subText">Bot responds with the price of the item when sold to a trader</p></b>
+                        </li> 
+                        <li>
                             <b><bold>!flea delay [time in seconds]</bold> - <p class="subText">Bot only responds to '!price' every [time in seconds]</p></b>
                         </li> 
                         <li>
@@ -93,6 +96,9 @@
                         </p>
                         <li>
                             <b><bold>!price [item name]</bold> - <p class="subText">Bot responds with the current flea market price of item</p></b>
+                        </li> 
+                        <li>
+                            <b><bold>!trade [item name]</bold> - <p class="subText">Bot responds with the price of the item when sold to a trader</p></b>
                         </li> 
                         <li>
                             <b><bold>!flea delay [time in seconds]</bold> - <p class="subText">Bot only responds to '!price' every [time in seconds]</p></b>
