--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <div class="container1TextContainer">
                 <h1 class="container1Text1">Gain easy access to Escape From Tarkov</h1>
-                <h1 class="container1Text2">Flea Market prices through Twitch.tv</h1>
+                <h1 class="container1Text2">Flea Market and Trader prices through Twitch.tv</h1>
                 <div class="patronButton">
                     <a href="https://www.patreon.com/bePatron?u=36663606" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
                 </div>
@@ -144,7 +144,7 @@
             <img src="resources/whiteDivConatiner2Bottom.png" class="containerDivider2Bottom" alt="Divider">
             <div class="containerFinalTextContainerTop">
                 <h1 class="containerFinalEmote1">😄😄😄</h1>
-                <h1 class="containerFinalText1">FleaMarketBot gives you and your viewers access to real-time in-game flea market prices.</h1>
+                <h1 class="containerFinalText1">FleaMarketBot gives you and your viewers access to real-time in-game flea market and trader prices.</h1>
                 <!-- <h1 class="containerFinalText2">favorite streamer to show your appreciation</h1>
                 <h1 class="containerFinalText3">favorite streamer to show your appreciation</h1> -->
                 <h1 class="containerFinalEmote2">😄😄😄</h1>
